fix: toast message on mobile, add footer to NotFound page

--- a/client/src/components/Appointment/Appt.scss
+++ b/client/src/components/Appointment/Appt.scss
@@ -516,7 +516,7 @@
 
 /* OTP input */
 .otp-input {
-  padding: 1rem 3rem 2rem;
+  padding: 0 48px 24px;
 }
 
 /* Tablet */
@@ -859,6 +859,6 @@
 
   /* OTP input */
   .otp-input {
-    padding: 1rem;
+    padding: 0 16px 24px;
   }
 }
