--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -33,7 +33,7 @@ header {
 /* Toast notification */
 .toast-noti {
   height: 50px;
-  padding: 12px 16px;
+  padding: 16px;
   font-size: 16px;
   min-width: 150px;
   position: fixed;
@@ -43,14 +43,14 @@ header {
 
 .toast-noti-2 {
   height: 80px;
-  padding: 16px 16px;
+  padding: 16px;
   font-size: 16px;
   min-width: 400px;
 }
 
 .toast-noti-3 {
   height: 50px;
-  padding: 16px 16px;
+  padding: 16px;
   font-size: 16px;
   min-width: 400px;
 }
